syntax="proto3";

package greet;

option go_package= "grpc-go/greet/proto";

message GreetRequest {
    string FirstName=1;
}

message GreetResponse {
    string Result=1;
}

service GreetService{
    rpc Greet ( GreetRequest) returns (GreetResponse);
}

//protoc -Igreet/proto --go_out=. --go_opt=module=grpc-go --go-grpc_out=. --go-grpc_opt=module=grpc-go greet/proto/greet.proto
